Переделал карточки товаров

--- a/css/style.css
+++ b/css/style.css
@@ -309,7 +309,7 @@ h1 {
   color: #666666;
 }
 
-.sedona-price {
+.example-item-price {
   background-color: #fb565a;
   width: 200px;
   height: 50px;
