--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,7 @@
 /*Общие стили*/
 body {
   width: 1440px;
-  height: 1925px;
+  min-height: 1925px;
   margin: 0;
   padding: 0;
 
@@ -33,8 +33,10 @@ a {
   color: #ffffff;
   font-weight: 500;
 
-  text-transform: uppercase;
+  height: 50px;
+  line-height: 50px;
   text-align: center;
+  text-transform: uppercase;
   background-color: #fb565a;
 }
 
@@ -42,7 +44,6 @@ a {
 
 .main-header {
   background-color: #eeeeee;
-  margin-bottom: 0;
 }
 
 .main-navigation {
@@ -101,7 +102,8 @@ a {
 /*Стили основной части*/
 
 .slider-wrapper {
-  height: 413px;
+  margin: 0;
+  min-height: 413px;
   padding: 0 140px 0 140px;
   background-color: #eeeeee;
 }
@@ -111,13 +113,14 @@ a {
   padding: 0;
 
   display: flex;
+  justify-content: space-between;
 }
 
-.slider-item .slider-item-text {
+.slider-item .slider-item-description {
   display: flex;
   flex-wrap: wrap;
   flex-direction: column;
-  justify-content: flex-start;
+  justify-content: center;
 }
 
 .slider-item::after {
@@ -125,20 +128,83 @@ a {
   content: "";
   background-image: url("../img/slide-picture.png");
   background-repeat: no-repeat;
-  min-width: 698px;
-  min-height: 413px;
+  width: 698px;
+  height: 413px;
 }
 
-.slider-headline {
+.slider-item-description h3 {
   font-size: 55px;
   font-weight: 700;
   line-height: 55px;
+
+  margin: 0;
+  margin-bottom: 28px;
 }
 
-.slider-item .button {
+.slider-item-description p {
+  margin: 0;
+  margin-bottom: 42px;
+
+  line-height: 24px;
+}
+
+.slider-item-description .button {
   background-color: #fb565a;
   width: 240px;
-  height: 50px;
-  line-height: 50px;
-  text-align: center;
+}
+
+.slider-item:nth-child(2)::after {
+  width: 663px;
+  height: 430px;
+  background-image: url("../img/slide-picture-2.png");
+}
+
+.slider-item:nth-child(3)::after {
+  width: 759px;
+  height: 411px;
+  background-image: url("../img/slide-picture-3.png");
+}
+
+.advantages {
+  margin: 80px 200px 0 140px;
+  padding: 0;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+}
+
+.advantages-item {
+  width: 300px;
+}
+
+.advantages-item::before {
+  content: "";
+
+  display: block;
+  width: 300px;
+  height: 146px;
+
+  background-image: url("../img/advantage-red.png");
+}
+
+.advantages-item:nth-child(2)::before {
+  background-image: url("../img/advantage-green.png");
+}
+
+.advantages-item:nth-child(3)::before {
+  background-image: url("../img/advantage-yellow.png");
+}
+
+.advantages-item h3 {
+  text-transform: uppercase;
+  font-size: 24px;
+  font-weight: 700;
+}
+
+.advantages-item p {
+  line-height: 24px;
+}
+
+.advantages-item .button {
+  width: 160px;
 }
