--- a/css/style.css
+++ b/css/style.css
@@ -1,8 +1,8 @@
 /*Общие стили*/
 body {
-  width: 1440px;
+  min-width: 1160px;
   min-height: 1925px;
-  margin: 0 auto 0 auto;
+  margin: 0;
   padding: 0;
 
   background-color: #ffffff;
@@ -19,12 +19,21 @@ a {
   text-decoration: none;
 }
 
+img {
+  max-width: 100%;
+}
 .visually-hidden {
   position: absolute;
   clip: rect(0 0 0 0);
   width: 1px;
   height: 1px;
   margin: -1px;
+}
+
+.container {
+  width: 1160px;
+  margin: 0 auto;
+  padding: 0;
 }
 
 .button {
@@ -51,7 +60,7 @@ a {
   display: flex;
   width: 1160px;
   justify-content: space-between;
-  margin: 0 140px 0 140px;
+  margin: 0;
   padding-top: 50px;
 
   font-size: 16px;
@@ -104,10 +113,13 @@ a {
 
 /*Стили для слайдера*/
 
+.slider {
+  margin: 0;
+}
+
 .slider-wrapper {
   margin: 0;
   min-height: 413px;
-  padding: 0 140px 0 140px;
   background-color: #eeeeee;
 }
 
@@ -124,7 +136,6 @@ a {
   flex-wrap: wrap;
   flex-direction: column;
   justify-content: center;
-  width: 530px;
   min-height: 413px
 }
 
@@ -182,7 +193,8 @@ a {
 
 /*Стили для блока преимуществ*/
 .advantages {
-  margin: 80px 200px 0 140px;
+  margin: 0;
+  margin-top: 80px;
   padding: 0;
   display: flex;
   flex-wrap: wrap;
@@ -237,7 +249,8 @@ a {
 /*Стили для блока с основной информацией*/
 
 .main-information-wrapper {
-  margin: 40px 140px 0 140px;
+  margin: 0;
+  margin-top: 40px;
   padding: 0;
   min-height: 375px;
 
@@ -347,7 +360,8 @@ a {
 
 .partners {
   display: flex;
-  margin: 46px 183px 0 171px;
+  margin: 0;
+  margin-top: 46px;
   justify-content: space-between;
   padding: 0;
 }
@@ -387,7 +401,8 @@ a {
 .section-partners::after {
   display: block;
   content: "";
-  margin: 44px 140px 80px 140px;
+  margin: 0;
+  margin-top: 44px;
   height: 2px;
   background-color: #eeeeee;
 }
@@ -402,7 +417,6 @@ a {
   width: 318px;
   height: 307px;
   background-color: white;
-  border: solid 1px white;
 
   position: absolute;
   top: 54px;
@@ -434,6 +448,7 @@ a {
 .studio-contacts .button {
   width: 219px;
   margin-top: 12px;
+  border: none;
 }
 
 .map-marker {
@@ -444,3 +459,14 @@ a {
 }
 
 /*Оформление подвала*/
+
+.main-footer {
+  display: flex;
+  margin-top: 78px;
+  justify-content: space-around;
+}
+
+.social-networks {
+  display: flex;
+  justify-content: space-between;
+}
