--- a/css/style.css
+++ b/css/style.css
@@ -556,6 +556,10 @@ img {
 
 .main-sorting h2 {
   margin: 0;
+
+  font-size: 18px;
+  line-height: 18px;
+  text-transform: uppercase;
 }
 
 .sorting-list {
@@ -716,26 +720,63 @@ img {
 }
 
 /*Разметка фильтров*/
-
-/*Разметка фильтра с ползунками*/
 .filter-item {
   margin: 0;
-  margin-top: 63px;
   padding: 0;
 
   border: none;
 }
 
-.range-filter {
-  width: 260px;
-  margin-top: 49px;
-}
-
 .filter-item legend {
   font-size: 18px;
-  line-height: 24px;
+  line-height: 30px;
   text-transform: uppercase;
   font-weight: 700;
+}
+
+.filter-item:not(:first-child) legend {
+  margin-bottom: 21px;
+}
+
+.catalog-form ul {
+  padding: 0;
+  margin: 0;
+  list-style: none;
+}
+
+.filter-option {
+  padding-left: 36px;
+  margin-bottom: 15px;
+}
+
+.filter-option label {
+  position: relative;
+
+  display: block;
+
+  color: #283136;
+
+  cursor: pointer;
+  user-select: none;
+}
+
+.filter-button {
+  width: 260px;
+
+  background-color: #eeeeee;
+
+  color: #000000;
+  font-weight: 500;
+  border: none;
+}
+/*Разметка фильтра с ползунками*/
+.filter-item-range {
+  margin-top: 58px;
+}
+
+.range-filter {
+  width: 260px;
+  margin-top: 47px;
 }
 
 .range-controls {
@@ -818,4 +859,72 @@ img {
 
 .max-price {
   text-align: right;
+}
+
+/*Разметка фильтра с радио-кнопками*/
+.filter-item-radio {
+  margin-top: 60px;
+}
+
+.filter-input-radio + label::before {
+  content: "";
+  position: absolute;
+  left: -37px;
+  top: -5px;
+
+  width: 25px;
+  height: 25px;
+
+  background-image: url("../img/radio-off.svg");
+  background-repeat: no-repeat;
+  background-position: 0 0;
+}
+
+.filter-input-radio:checked + label::after {
+  content: "";
+
+  position: absolute;
+  top: -5px;
+  left: -37px;
+
+  width: 25px;
+  height: 25px;
+
+  background-image: url("../img/radio-on.svg");
+  background-repeat: no-repeat;
+  background-position: 0 0;
+}
+
+/*Разметка фильтра с чекбоксами*/
+.filter-item-checkbox {
+  margin-top: 42px;
+}
+
+.filter-input-checkbox + label::before {
+  content: "";
+  position: absolute;
+  left: -37px;
+  top: 0;
+
+  width: 23px;
+  height: 23px;
+
+  background-image: url("../img/checkbox-off.svg");
+  background-repeat: no-repeat;
+  background-position: 0 0;
+}
+
+.filter-input-checkbox:checked + label::after {
+  content: "";
+
+  position: absolute;
+  top: 0px;
+  left: -37px;
+
+  width: 27px;
+  height: 23px;
+
+  background-image: url("../img/checkbox-on.svg");
+  background-repeat: no-repeat;
+  background-position: 0 0;
 }
