--- a/css/style.css
+++ b/css/style.css
@@ -928,3 +928,108 @@ img {
   background-repeat: no-repeat;
   background-position: 0 0;
 }
+
+/*Оформление модального окна*/
+
+.modal {
+  position: relative;
+  width: 960px;
+  height: 590px;
+  box-sizing: border-box;
+  padding-left: 100px;
+  padding-top: 70px;
+  padding-right: 100px;
+
+  background-color: #ffffff;
+  box-shadow: 0px 20px 40px 0 rgba(0, 1, 1, 0.75);
+}
+
+.modal h2 {
+  font-size: 45px;
+  line-height: 45px;
+  font-weight: 500;
+
+  margin: 0;
+  margin-bottom: 43px;
+}
+
+.modal p {
+  display: inline-block;
+  margin: 0;
+}
+
+.modal .modal-field-name {
+  margin-right: 35px;
+  margin-bottom: 33px;
+}
+
+.modal .modal-field-letter {
+  margin-bottom: 46px;
+}
+
+.modal .button {
+  width: 260px;
+
+  border: none;
+}
+
+.modal label {
+  display:block;
+
+  font-weight: 700;
+  line-height: 18px;
+}
+
+.modal input {
+  width: 360px;
+  box-sizing: border-box;
+
+  padding-top: 17px;
+  padding-left: 14px;
+  padding-bottom: 19px;
+}
+
+.modal-field-letter textarea {
+  width: 760px;
+  box-sizing: border-box;
+
+  padding-top: 17px;
+  padding-left: 14px;
+  padding-bottom: 88px;
+}
+
+.modal-close {
+  position: absolute;
+  top: 82px;
+  right: 90px;
+
+  width: 21px;
+  height: 21px;
+  background: none;
+
+  border: 0;
+
+  cursor: pointer;
+}
+
+.modal-close::before,
+.modal-close::after {
+  content: "";
+
+  position: absolute;
+  top: 10px;
+  left: 0;
+
+  width: 22px;
+  height: 3px;
+
+  background-color: #d0d0d0;
+}
+
+.modal-close::before {
+  transform: rotate(45deg);
+}
+
+.modal-close::after {
+  transform: rotate(-45deg);
+}
